<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.SettingsActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:title=""
        android:elevation="4dp"
        app:titleTextColor="@color/white"
        android:background="@color/soft_grey"
        app:navigationIcon="@drawable/ic_arrow_back_black_24dp"/>

    <TextView
        android:id="@+id/title_languae_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/language_settings"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/toolbar_settings"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp" />

    <TextView
        android:id="@+id/tv_change_language"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/change_language_settings"
        android:textColor="@color/grey"
        app:layout_constraintTop_toBottomOf="@id/title_languae_settings"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:drawableEnd="@drawable/ic_arrow_right_black_24dp"/>

    <View
        android:id="@+id/divider_line_1"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/grey"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_change_language"/>

    <TextView
        android:id="@+id/title_daily_reminder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/daily_reminder"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/divider_line_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp" />

    <Switch
        android:id="@+id/reminder_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/remind_to_return_to_application"
        android:textColor="@color/grey"
        app:layout_constraintTop_toBottomOf="@id/title_daily_reminder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"/>

    <View
        android:id="@+id/divider_line_2"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/grey"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@+id/reminder_switch"/>

</androidx.constraintlayout.widget.ConstraintLayout>