<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.DetailActivity"
    android:orientation="vertical"
    android:background="@color/white">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:background="@color/white">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="320dp"
                android:background="@color/soft_grey">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/img_avatar"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:elevation="4dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="70dp"
                    android:contentDescription="@string/avatar"/>

                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/img_avatar"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="16dp"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    tools:text="Name"
                    android:textAlignment="center"
                    android:textColor="@color/white"/>

                <TextView
                    android:id="@+id/tv_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/tv_name"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="4dp"
                    tools:text="Username"
                    android:textAlignment="center"
                    android:textColor="@color/grey"/>

                <TextView
                    android:id="@+id/tv_company"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="Company"
                    android:textColor="@color/white"
                    android:drawableStart="@drawable/ic_company"
                    android:drawablePadding="4dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@id/tv_username"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <TextView
                    android:id="@+id/tv_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="Location"
                    android:textColor="@color/white"
                    android:drawableStart="@drawable/ic_location"
                    android:drawablePadding="4dp"
                    android:layout_marginTop="4dp"
                    app:layout_constraintTop_toBottomOf="@id/tv_company"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <TextView
                    android:id="@+id/tv_repository"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="Repository"
                    android:textColor="@color/white"
                    android:drawableStart="@drawable/ic_repository"
                    android:drawablePadding="4dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintTop_toBottomOf="@id/tv_location"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

                <ImageView
                    android:id="@+id/logo_right"
                    android:layout_width="wrap_content"
                    android:layout_height="117dp"
                    android:src="@drawable/ic_github_right"
                    android:layout_marginTop="154dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="@id/tv_location"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:contentDescription="@string/github_logo"/>

                <ImageView
                    android:id="@+id/logo_left"
                    android:layout_width="wrap_content"
                    android:layout_height="117dp"
                    android:src="@drawable/ic_github_left"
                    android:layout_marginTop="154dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="@id/tv_location"
                    app:layout_constraintStart_toStartOf="parent"
                    android:contentDescription="@string/github_logo"/>

                <ProgressBar
                    android:id="@+id/pb_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Widget.AppCompat.ProgressBar"
                    android:indeterminate="true"
                    android:indeterminateTint="@color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="@id/img_avatar"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"

                    android:visibility="gone"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/soft_grey"
                app:navigationIcon="@drawable/ic_arrow_back_black_24dp"
                app:titleTextColor="@color/white"
                app:layout_collapseMode="pin"
                app:title="" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/soft_grey"
            app:tabTextColor="@color/white"
            app:tabRippleColor="@null"
            app:tabIndicatorColor="@color/blue"
            app:tabIndicatorHeight="4dp"/>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        app:borderWidth="0dp"
        android:src="@drawable/ic_favorite_border_white_24dp"
        android:contentDescription="@string/button_favorite"
        android:layout_margin="16dp"
        android:backgroundTint="@color/blue"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>